[package]
name = "fiveo"
version = "0.2.0"
authors = ["Gary Tierney <gary.tierney@gmx.com>"]
description = "An approximate string matching library built with the web in mind"
license = "ISC"

[features]
webassembly = ["wee_alloc"]

[profile.release]
debug = true

[dependencies]
wee_alloc = { version = "0.2.0", optional = true }

